* v4.3.8    UNRELEASED

Bugfixes:

- In v4.3.7 we started to restore the display-start positions of the
  windows displaying a buffer that is being refreshed, but in log
  buffers that is undesirable.  After creating a new commit we want
  that to immediately be displayed at the top of windows displaying
  log buffers.  #5403

- Refreshing was skipped after discarding all untracked files.

* v4.3.7    2025-07-01

- Refreshing a buffer causes its content to be recreated, which can
  result in scrolling.  Now we attempt to restore the display-start
  positions of the windows displaying the buffer.  #5403

- When running ~git~ for side-effects and that signals an error, we
  did not augment the error message to inform the user that the full
  output can be found in the process buffer.  When the error is not
  signaled, we did already append that hint to the message.  Also
  added a new option, ~magit-show-process-buffer-hint~, for people who
  are already aware of the process buffer and would like to avoid
  the noisy reminder.  #5396

Bugfixes:

- Some instructions inserted into rebase sequence buffers were not
  prefixed with ~comment-start~, instead # was used unconditionally.
  #5388

- Fixed a regression in v4.3.6, which caused a conflict between the
  overlays used for section highlighting and section selection, if
  both of these faces relied on the same face property (likely the
  foreground color).  #5389

- Hunks could remain painted as selected when navigating away.  #5393

- The log arguments "--grep" and "--graph" are no longer mutually
  exclusive, but we still dropped the latter when the former was
  used. #5391

- ~magit-save-repository-buffers~ errored on older Emacs releases,
  if the value of the variable by the same name is ~ask~.  #5399

- ~magit-after-save-refresh-status~ did not honor ~magit-inhibit-refresh~.
  d9d2f6c312

* v4.3.6    2025-06-01

- Generalized and heavily refactored the code, previously used only to